# fastapi-mailing-lists

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
application/: asgi.py  initial_data.py  utils.py
application/api/: dependencies.py
application/api/routers/: __init__.py  auth.py  mailing.py
application/core/: config.py  security.py
application/crud/: __init__.py  subscription_email.py  user.py
application/database/: base.py  init_db.py  models.py  redis_client.py  session.py
application/schemas/: __init__.py  email_content.py  subscription_email.py  token.py  user.py
application/templates/: unsubscribed.html
application/templates/email/: mailing_list_email.html
docker/: runserver.sh
migrations/: env.py
migrations/versions/: 6efed3948da3_init.py  7b2c3c6d8596_subscription_email.py
